--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,11 +11,13 @@ services:
       - .:/home/node/app
     depends_on:
       - db
-  
+
   db:
     image: mysql:5.7
     build: ./.docker/mysql
     restart: always
+    ports:
+      - 3306:3306
     tty: true
     volumes:
       - ./.docker/dbdata:/var/lib/mysql
